--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
-    <link rel="stylesheet" type="text/css" href="static/datatables.css" />
-    <script type="text/javascript" src="static/datatables.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="static/datatables.css" /> -->
+    <link rel="stylesheet" type="text/css" href="static/tabulator_bootstrap5.css" />
+    <link rel="stylesheet" type="text/css" href="static/bootstrap.css" />
+    <!-- <script type="text/javascript" src="static/datatables.js"></script> -->
+    <script type="text/javascript" src="static/tabulator.js"></script>
+    <script type="text/javascript" src="static/jquery-3.6.1.min.js"></script>
+    <script type="text/javascript" src="static/bootstrap.bundle.js"></script>
 </head>
 
 {% block body %} {% endblock %}
